--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
     <!-- ----------------------------------------------------------------------- -->
     <!--                           END HEADER SECTION                            -->
     <!-- ----------------------------------------------------------------------- -->
-    <!-- FONTAWESOME -->
+    <!-- Icons from FontAwesome -->
     <script
       src="https://kit.fontawesome.com/4679a6cec2.js"
       crossorigin="anonymous"
     ></script>
-    <!-- FONTAWESOME -->
+    <!-- Icons from FontAwesome -->
   </body>
 </html>
