--- a/categories.html
+++ b/categories.html
@@ -94,8 +94,8 @@
       <div class="container">
         <ul class="nav-list">
           <li class="nav-item"><a href="./index.html">Home</a></li>
-          <li class="nav-item"><a class="active" href="./hot-deals.html">Hot Deals</a></li>
-          <li class="nav-item"><a href="./categories.html">Categories</a></li>
+          <li class="nav-item"><a href="./hot-deals.html">Hot Deals</a></li>
+          <li class="nav-item"><a  class="active" href="./categories.html" class="active">Categories</a></li>
           <li class="nav-item"><a href="./laptops.html">Laptops</a></li>
           <li class="nav-item"><a href="./smartphones.html">Smartphones</a></li>
           <li class="nav-item"><a href="./cameras.html">Cameras</a></li>
