--- a/laptops.html
+++ b/laptops.html
@@ -94,9 +94,9 @@
       <div class="container">
         <ul class="nav-list">
           <li class="nav-item"><a href="./index.html">Home</a></li>
-          <li class="nav-item"><a class="active" href="./hot-deals.html">Hot Deals</a></li>
+          <li class="nav-item"><a href="./hot-deals.html">Hot Deals</a></li>
           <li class="nav-item"><a href="./categories.html">Categories</a></li>
-          <li class="nav-item"><a href="./laptops.html">Laptops</a></li>
+          <li class="nav-item"><a  class="active" href="./laptops.html">Laptops</a></li>
           <li class="nav-item"><a href="./smartphones.html">Smartphones</a></li>
           <li class="nav-item"><a href="./cameras.html">Cameras</a></li>
           <li class="nav-item"><a href="./accessories.html">Accessories</a></li>
